# fourth-ical-rs

./: .gitignore  Cargo.toml  Dockerfile  readme.md
api/: calendar.rs  handler.rs
src/: colleagues.rs  employee.rs  lib.rs  login.rs  main.rs  shift.rs  test.py
