[package]
name = "fourth-ical-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
chrono = { version = "0.4.23", features = ["serde"] }
enum-iterator = "1.2.0"
fancy-regex = "0.11.0"
futures = "0.3.25"
icalendar = "0.15.1"
reqwest = { version = "0.11.13", features = ["json", "cookies"] }
scraper = "0.14.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_plain = "1.0.1"
strum = "0.24.1"
strum_macros = "0.9.0"
time = { version = "0.3.17", features = ["serde"] }
tokio = { version = "1.24.1", features = ["full"] }
urlencoding = "2.1.2"
