[package]
name = "fourth-ical-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
fancy-regex = "0.11.0"
icalendar = "0.15.1"
reqwest = { version = "0.11.13", features = ["json", "cookies"] }
scraper = "0.14.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_plain = "1.0.1"
tokio = { version = "1.24.1", features = ["macros"] }
urlencoding = "2.1.2"
vercel_runtime = "1.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "handler"
path = "api/handler.rs"
